# aether

./: .gitignore  Aether-Native_Blueprint.md  PROGRESS.md  README.md  demo_debug.py  demo_features.py  demo_hybrid_agent.py  demo_hybrid_perception.py  demo_mouse.py  demo_multi_app.py  demo_real_desktop.py  demo_streaming_capture.py  demo_youtube.py  demo_youtube_mouse_only.py  pyproject.toml
aether/: cli.py
aether/action/: __init__.py  base.py  linux.py  ydotool.py
aether/api/: app.py  dependencies.py
aether/api/routers/: task.py
aether/brain/: __init__.py  local_llm.py  openrouter.py
aether/core/: __init__.py  brain.py  desktop_verify.py  knowledge.py  loop.py  memory.py  models.py  safety.py  verify.py
aether/macro/: models.py  player.py  recorder.py
aether/perception/: __init__.py  base.py  hybrid.py  linux.py  openrouter_vision.py  screenshot.py  streaming.py  video_recorder.py  vision_first.py
aether/prompts/: planner.j2
demos/: demo.py  demo_hybrid_agent.py  demo_real_desktop.py  demo_youtube_detect.py  demo_youtube_slow.py
docs/superpowers/plans/: 2026-05-04-aether-native-phase0.md  2026-05-04-aether-native-phase1.md  2026-05-19-close-the-loop.md
docs/superpowers/specs/: 2026-05-04-aether-native-design.md  2026-05-19-aether-native-revised-design.md  (+1 more)
tests/: harness.py  test_api.py  test_cli.py  test_integration.py  test_macro.py
tests/fixtures/: calculator_linux.json
tests/test_core/: test_action.py  test_brain.py  test_loop.py  test_memory.py  test_models.py  test_perception.py  test_safety.py  test_verify.py
